--- a/script/requirements.txt
+++ b/script/requirements.txt
@@ -3,7 +3,7 @@ argon2-cffi-bindings==21.2.0
 certifi==2024.7.4
 cffi==1.17.0
 minio==7.2.8
-psycopg2==2.9.9
+psycopg2-binary==2.9.3
 pycparser==2.22
 pycryptodome==3.20.0
 typing_extensions==4.12.2
